<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.musicalstructure.NowPlayingActivity">

    <LinearLayout style="@style/linearLayoutInNowPlayingActivityStyle">
        <LinearLayout style="@style/linearLayoutInMainActivityStyle">

            <Button
                android:id="@+id/buttonSongs"
                style="@style/buttonStyle"
                android:text="@string/buttonSongsText" />

            <Button
                android:id="@+id/buttonAlbums"
                style="@style/buttonStyle"
                android:text="@string/buttonAlbumsText" />

            <Button
                android:id="@+id/buttonArtists"
                style="@style/buttonStyle"

                android:text="@string/buttonArtistText" />
        </LinearLayout>
        <TextView
            android:id="@+id/descreption"
            style="@style/descreptionTextNowPlaying" />

        <ImageView style="@style/ImageViewInNowPlayingActivityStyle" />

        <TextView
            android:id="@+id/nowPlayingText"
            style="@style/TextViewInNowPlayingActivityStyle"
            tools:text="@string/songNameText" />

        <ImageButton
            android:id="@+id/buttonplay"
            style="@style/ImageButtonInNowPlayingActivityStyle"/>
    </LinearLayout>
</ScrollView>
