<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221F25"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout style="@style/linearLayoutInMainActivityStyle">

        <Button
            android:id="@+id/buttonSongs"
            style="@style/buttonStyle"
            android:text="@string/buttonSongsText" />

        <Button
            android:id="@+id/buttonAlbums"
            style="@style/buttonStyle"
            android:text="@string/buttonAlbumsText" />

        <Button
            android:id="@+id/buttonArtists"
            style="@style/buttonStyle"
            android:text="@string/buttonArtistText" />
    </LinearLayout>

    <TextView
        android:id="@+id/descreption"
        style="@style/descreptionMain" />

    <ListView
        android:id="@+id/list"
        style="@style/listViewInMainActivityStyle" />
</LinearLayout>
